# Battleship

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  update_cmake_version.sh
src/: algorithm.hpp  game.hpp  input.hpp  kelp.hpp  main.cpp  multiplayer.hpp  output.cpp  output.hpp  reset.hpp  setup.hpp
